crates/biome_cli/tests/snapshots/main_cases_handle_vue_files/format_vue_implicit_js_files_write.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome format --write file.vue
```

## `file.vue`

```vue
<script>
import { something } from "file.vue";
statement();
</script>
<template></template>
```

# Emitted Messages

```block
Formatted 1 file in <TIME>. Fixed 1 file.
```
