crates/biome_cli/tests/snapshots/main_cases_handle_vue_files/format_vue_js_files_write.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: content
---
## `file.vue`

```vue
<script>
import { something } from "file.vue";
statement();
</script>
<template></template>
```

# Emitted Messages

```block
Formatted 1 file(s) in <TIME>
```