crates/biome_cli/tests/snapshots/main_cases_handle_vue_files/full_support.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome check --write --unsafe file.vue
```

## `biome.json`

```json
{
  "html": {
    "formatter": { "enabled": true },
    "linter": { "enabled": true },
    "experimentalFullSupportEnabled": true
  }
}
```

## `file.vue`

```vue
<script>
import { sure } from "sure.js";
import z from "zod";

let schema = z.object().optional();
schema + sure();
</script>

<html>
	<head>
		<title>Svelte</title>
	</head>
	<body></body>
</html>

<style>
#id {
	font-family: comic-sans;
}
.class {
	background: red;
}
:slotted(div) {
	color: red;
}
:global(div) {
	color: red;
}
</style>

```

# Termination Message

```block
check ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
file.vue:9:1 lint/a11y/useHtmlLang ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Provide a lang attribute when using the html element.
  
     7 │ </script>
     8 │ 
   > 9 │ <html>
       │ ^^^^^^
    10 │ 	<head>
    11 │ 		<title>Svelte</title>
  
  i Setting a lang attribute on HTML document elements configures the language used by screen readers when no user default is specified.
  

```

```block
file.vue:18:15 lint/a11y/useGenericFontNames ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Generic font family missing.
  
    16 │ <style>
    17 │ #id {
  > 18 │ 	font-family: comic-sans;
       │ 	             ^^^^^^^^^^
    19 │ }
    20 │ .class {
  
  i Consider adding a generic font family as a fallback.
  
  i For examples and more information, see the MDN Web Docs
  
  - serif
  - sans-serif
  - monospace
  - etc.
  

```

```block
Checked 1 file in <TIME>. Fixed 1 file.
Found 2 errors.
```
