crates/biome_cli/tests/snapshots/main_cases_handle_vue_files/full_support_enabled_and_scss_is_skipped.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome check --write --unsafe file.vue
```

## `biome.json`

```json
{
  "html": {
    "formatter": { "enabled": true },
    "linter": { "enabled": true },
    "experimentalFullSupportEnabled": true
  }
}
```

## `file.vue`

```vue
<html lang="en">
	<head>
		<title>Vue</title>
	</head>
	<body></body>
</html>

<style lang="scss">
#id { font-family: comic-sans } .class { background: red}
</style>

```

# Emitted Messages

```block
Checked 1 file in <TIME>. Fixed 1 file.
```
